--- a/setup_devel_environment.yaml
+++ b/setup_devel_environment.yaml
@@ -6,12 +6,6 @@
   become_user: root
 
   tasks:
-    - name: Update cache and all packages
-      ansible.builtin.apt:
-        pkg: "*"
-        state: latest
-        update_cache: yes
-
     - name: Install python3-docker from apt
       ansible.builtin.apt:
         pkg: python3-docker
@@ -100,7 +94,7 @@
       ansible.builtin.shell: go get sigs.k8s.io/kind
 
     - name: Add go bin to path
-      ansible.builtin.shell: echo "if [ -d \"$HOME/go/bin\" ]; then PATH=\"$HOME/go/bin:$PATH\"; fi" >> "$HOME/.profile"
+      ansible.builtin.shell: echo "if [ -d \"\$HOME/go/bin\" ]; then PATH=\"\$HOME/go/bin:\$PATH\"; fi" >> "$HOME/.profile"
 
 - name: Checkout Cluster API repositories
   hosts: all
@@ -151,6 +145,4 @@
         networks:
           - name: kind
           - name: "{{ reg_name }}"
-
-
 
